Bug 156728 - Crash when closing KImageMapEditor tab after closing other tabs
Summary: Crash when closing KImageMapEditor tab after closing other tabs
Status: RESOLVED FIXED
Alias: None
Product: quanta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: András Manţia
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-26 17:37 UTC by Eduard Sukharev
Modified: 2008-01-26 17:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eduard Sukharev 2008-01-26 17:38:00 UTC
Version:           3.5.7 (using KDE 3.5.7)
Installed from:    Mandriva RPMs
OS:                Linux

Quanta crashes when i do the following:
1) Open some files (1 or more)
2) Open the KImageMapEditor and choose a file to edit
3) Do anything or do nothing at all -doesn't matter
4) Right-click the KImageMapEditor tab and choose "Close other tabs"
5) The only one tab left is KImageMapEditor. Close it and Quanta crashes.

When just closing other tabs through any file tab it works well, but crashes only in KImageMapEditor.
It doesn't matter how do i close the last tab (which is KImageMapEditor) - through right-click menu or through tab close button.
Comment 1 András Manţia 2008-01-26 17:48:03 UTC
SVN commit 766787 by amantia:

Fix crash when closing a plugin and no other document is opened.

BUG: 156728


 M  +2 -1      ChangeLog  
 M  +7 -7      quanta.kdevelop  
 M  +1 -1      src/viewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=766787