Fix crash when closing a plugin and no other document is opened.

BUG: 156728